# lianghua

./: .gitignore  .service.pid  README.md  cleanup_all_nodes.bat  cleanup_ports.bat  electron_simple.bat  manage.bat  ports_config.json  ports_config.py  service_console.py  service_gui.py  service_manager.py  service_manager_gui.py  shared_config.py  start_backend.bat  start_console.bat  start_gui.bat  start_service_console.html  start_services.py  start_unified.bat  test-download.html  test_backend.py  test_backtest_api.json  test_gui.py  unified_service_manager.py  服务管理工具说明.md
.claude/: settings.local.json
backend/: pyproject.toml  requirements-core.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  backtest.py  data.py  experiments.py  health.py  labels.py  system.py  websocket.py
backend/app/core/: config.py  database.py  process_manager.py  task_manager.py
backend/app/engine/: __init__.py  backtest_engine.py
backend/app/models/: data.py
backend/app/services/: __init__.py  data_downloader.py  label_calculator.py
backend/tests/: __init__.py  conftest.py  pytest.ini  test_health.py
docs/: claude_dev.md  claude_dev_plan.md  current_system_status.md  ui.html  ui.md  wenti.md  yahoo.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: main.js  preload.js  service-console.html
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Backtest.tsx  (+5 more)
(+3 files in other folders)
